@@ -50,6 +50,7 @@ Misc:
  - PSP2: Add rumble for PS TV
  - PSP2: Add fit-to-height screen mode
  - GBA Video: Remove old slow path fallback
+ - GBA Video: Optimize sprite drawing
 
 0.4.1: (2016-07-11)
 Bugfixes:
